<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/logoPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@drawable/logo_panel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@raw/logo_icon"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/CircleImage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="Share Wheels"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:letterSpacing="0.05"
                android:textSize="25sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/introTextOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_connect"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoPanel"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_slab"/>

        <TextView
            android:id="@+id/introTextTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introTextOne"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/introTextTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/phoneButton"/>

        <FrameLayout
            android:id="@+id/phoneButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_design"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/googleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/phone"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/continue_with_phone"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_design"
            app:layout_constraintBottom_toTopOf="@id/termsPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/termsPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:gravity="center"
            android:paddingEnd="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:text="@string/accept_the_terms_and_condition"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>