<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailsPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/logoPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@drawable/logo_panel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@raw/logo_icon"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/CircleImage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/share_wheels"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:letterSpacing="0.05"
                android:textSize="25sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/introTextOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tell_us"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoPanel"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_slab"/>

        <TextView
            android:id="@+id/introTextTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/we_need_few_information_about_you_to_make_your_expereince_good"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introTextOne"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introTextTwo"
            android:layout_marginTop="20dp"
            android:background="@drawable/look_panel">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/welcomePanel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/user"/>

                    <TextView
                        android:id="@+id/welcomeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="Hi, User"
                        android:textSize="25sp"
                        android:fontFamily="@font/roboto_slab"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/namePanel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/welcomePanel">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/feild_design"
                        android:hint="@string/enter_your_name"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/droid_serif"
                        android:textSize="20sp"
                        android:padding="5dp"
                        android:textColorHint="@color/hintColor"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    app:layout_constraintStart_toStartOf="@id/namePanel"
                    app:layout_constraintEnd_toEndOf="@id/namePanel"
                    app:layout_constraintTop_toBottomOf="@id/namePanel"/>

                <LinearLayout
                    android:id="@+id/dobPanel"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/date_picker"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/namePanel"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/date" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/select_date_of_birth"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins"
                        android:textSize="15sp"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>