<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PhoneNumber">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/logoPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@drawable/logo_panel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@raw/logo_icon"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/CircleImage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="Share Wheels"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:letterSpacing="0.05"
                android:textSize="25sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/introTextOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoPanel"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_slab"/>

        <TextView
            android:id="@+id/introTextTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/enter_your_correct_phone_number_to_continue_signup_process"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introTextOne"/>

        <LinearLayout
            android:id="@+id/phonePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introTextTwo">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/india"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/droid_serif"
                android:text="@string/_91"
                android:textColor="@color/black"
                android:textSize="18sp" />
            
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/line"/>
            
            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/feild_design"
                android:layout_gravity="center"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:textColorHint="@color/hintColor"
                android:layout_marginBottom="1dp"
                android:maxLength="10"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/droid_serif"/>

        </LinearLayout>
        
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/phonePanel"
            app:layout_constraintStart_toStartOf="@id/phonePanel"
            app:layout_constraintEnd_toEndOf="@id/phonePanel"
            android:background="@drawable/line"/>

        <FrameLayout
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_design"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/get_otp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_slab"
                    android:layout_gravity="center"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>